--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10754,7 +10754,11 @@ section.top_navigation_bar .page_1_wrapper {
 		font-size: 38px;
 	}
 }
-
+section.section_01.video-bg.position-relative video {
+    max-height: 650px;
+    width: 100%;
+    object-fit: cover;
+}
 @media only screen and (max-width: 1023px){
 	.swiper.products_swiper .swiper-button-next,.swiper.products_swiper .swiper-rtl .swiper-button-prev, .swiper.products_swiper .swiper-button-prev.new_swiper_prev,.swiper.products_swiper .swiper-button-prev {
 		top: 35%; 
