--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10774,6 +10774,9 @@ a.btn.btn--primary.btn--md.width-100\%.text-uppercase{
 	padding-right: 0;
 }
 @media only screen and (max-width: 1023px){
+	p.section_title.font-secondary{
+		margin-top: 10px;
+	}
 	section.section_08.past_collaboration {
 		margin-top: 70px; 
 	}
