--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10775,7 +10775,7 @@ a.btn.btn--primary.btn--md.width-100\%.text-uppercase{
 }
 @media only screen and (max-width: 1023px){
 	p.section_title.font-secondary{
-		margin-top: 10px;
+		margin-top: 30px;
 	}
 	section.section_08.past_collaboration {
 		margin-top: 70px; 
@@ -11187,7 +11187,10 @@ section.section_05 {
 	}
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 767px){
+	p.section_title.font-secondary{
+		margin-top: 0px;
+	}
 	section.top_navigation_bar { 
 		justify-content: flex-start; 
 	}
