--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8376,7 +8376,7 @@ em {
 				0.12
 			);
 }
-/* .btn:focus {
+button:focus {
 	-webkit-box-shadow: 0 0 0 2px
 		hsla(
 			var(--color-contrast-higher-h),
@@ -8392,7 +8392,7 @@ em {
 			0.15
 		);
 	outline: none;
-} */
+}
 .btn:active {
 	-webkit-transform: translateY(2px);
 	transform: translateY(2px);
@@ -10191,9 +10191,9 @@ font-style: italic;
 	margin-bottom: 80px;
 }
 .products_grid_wrapper {
-    display: flex;
+    /* display: flex; */
     /* column-gap: 24px; */
-    row-gap: 78px;
+    /* row-gap: 78px; */
     padding-bottom: 78px;
 }
 .single_product_grid img , .single_product_grid p , .single_product_grid a{
@@ -10257,7 +10257,7 @@ p.small_text_bottom.text-xs {
 	outline: auto;
 }
 .email-input-container input:active{
-	outline: none;
+	outline: auto;
 }
 
 .email-input-container input::placeholder {
@@ -10855,9 +10855,9 @@ height: 13px;
 		max-width: 329px;
 	}
 	.products_grid_wrapper {
-		display: flex; 
+		/* display: flex; 
 		/* column-gap: 10px; */
-		row-gap: 30px;
+		row-gap: 30px; */
 		padding-bottom: 40px;
 	}
 	footer .email-input-container {
