--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8378,19 +8378,19 @@ em {
 }
 button:focus {
 	-webkit-box-shadow: 0 0 0 2px
-		hsla(
-			var(--color-contrast-higher-h),
-			var(--color-contrast-higher-s),
-			var(--color-contrast-higher-l),
-			0.15
-		);
+	hsla(
+		210, /* Adjusted hue value for blue */
+		var(--color-contrast-higher-s),
+		var(--color-contrast-higher-l),
+		0.15 /* Alpha value remains the same */
+	  );
 	box-shadow: 0 0 0 2px
-		hsla(
-			var(--color-contrast-higher-h),
-			var(--color-contrast-higher-s),
-			var(--color-contrast-higher-l),
-			0.15
-		);
+	hsla(
+		210, /* Adjusted hue value for blue */
+		var(--color-contrast-higher-s),
+		var(--color-contrast-higher-l),
+		0.15 /* Alpha value remains the same */
+	  );
 	outline: none;
 }
 .btn:active {
