--- a/stylesheets/gift_guide_style.css
+++ b/stylesheets/gift_guide_style.css
@@ -10558,6 +10558,9 @@ display: none;
 	}
 }
 @media only screen and (max-width: 767px){
+	p.small_text_bottom.text-xs{
+		margin-top: 30px;
+	}
 	.muteUnmute svg{
 		width: 25px; 
 	}
@@ -10733,13 +10736,17 @@ section.section_05 {
 	.product-card-desc {
 		margin-bottom: 0;
 		padding: 0;
-		font-size: 14px;
+		font-size: 16px;
 		font-weight: normal;
 		font-stretch: condensed;
 		font-style: normal;
 		line-height: 1.57;
 		letter-spacing: normal;
 		text-align: center;
+	}
+	.section_04{
+		padding-top: 70px;
+		padding-bottom: 40px;
 	}
 	.section_07 .margin-bottom-lg.text-md{
 		font-size: 16px;
